@startuml
skinparam classAttributeIconSize 0
hide circle
hide methods


class Librarian{}

class Lending {
    - id
    - lendindCode
    - readerId
    - bookId
    - bookTitle
    - daysTillReturn
    - returned
    - daysOverdue
    - fine
    - comment
}

class Genre{
    - id
    - name
}

class Book{
    - id
    - isbn
    - title
    - description
}

class Reader{
    - id
    - readerCode
    - name
    - email
    - age
    - phoneNumber
    - GDBRConsent
    - interests
}

Librarian "1" -left- "1..*" Book

Book "1..*" *-up- "1" Genre

Book "1" -- "1..*" Lending

Lending "1" *-- "1" lendDate
Lending "1" *-- "1" returnedDate
Lending "1" *-- "1" limitDate

Lending "1..*" -left- "1" Reader

@enduml
